# urii

./: Cargo.toml  README.md
examples/: config.json  urii.json
src/: bot.rs  dice.rs  excuse.rs  info.rs  karma.rs  main.rs  seen.rs  store.rs  summon.rs  timer.rs  urlinfo.rs  yesno.rs
