[package]
name = "urii"
version = "0.1.0"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]

[dependencies]
chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }
hyper = "0.10"
irc = { version = "0.11.0", default-features = false, features = ["ctcp", "encode"] }
marksman_escape = "0.1.2"
rand = "0.3"
regex = "0.2"
reqwest = "0.4.0"
rusqlite = "0.10.1"
rustc-serialize = "0.3"
serde = "0.9.11"
serde_derive = "0.9"
serde_json = "0.9"
time = "0.1"
timer = "0.1.6"
